Version 0.5
~~~~~~~~~~~
* Post DiFX-2.2
* Fix the 2-bit 16 thread case in the vdifmux function
* 1-bit corner turners now supported: 1, 2, 3, 4, 5, 6, 7, 8 threads
* 2-bit corner turners now supported: 1, 2, 3, 4, 5, 6, 7, 8, 10, 12, 14, 16 threads
* 4-bit corner turners now supported: 1, 2, 3, 4, 5, 6, 7, 8 threads
* 8-bit corner turners now supported: 1, 2, 3, 4, 5, 6, 7, 8, 10, 12, 14, 16 threads
* add corner turn test program: testcornerturners
* add function to decode data from a single frame of VDIF data

Version 0.4
~~~~~~~~~~~
* Add new vdifmux function which takes a multi-threaded VDIF buffer, looks
  for frames with certain threadIds, and multiplexes them into a single-
  threaded output buffer.
* New programs exercising new library routines:
  - vsum       summarize contents of 1 or more VDIF files
  - vmux       multiplex a multi-thread VDIF file into a single-thread file
* New utilities (mirroring functionality of mark5access utilities):
  - vdifd      (m5d)
  - vdifbstate (m5bstate)
  - vdiffold   (m5fold)
  - vdifspec   (m5spec)
* Other new utilities
  - extractVDIFThreads: gets only packets corresponding to given thread IDs
* Inlinification and constification of many VDIF header access functions
* Large file clean (I think) now...
* Fix bugs in multi2singlethreadVDIF which caused crashes if many packets missing
* Version for DiFX-2.2, May 31, 2013

Version 0.3
~~~~~~~~~~~
* Version for DiFX-2.1, May 4, 2012

Version 0.2
~~~~~~~~~~~
* Post DiFX-2.0.0
* Ability to make RPM files
* Version for DiFX-2.0.1, June 10, 2011

Version 0.1
~~~~~~~~~~~
* Initial implementation of vdifio
* Serves multiple VDIF threads from one source to multiple sinks
* Version for DiFX-2.0.0